--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Build and Release
 on:
   push:
     branches:
-      - ci/cd
+      - main
 
 permissions:
   contents: write
@@ -32,7 +32,7 @@ jobs:
       # Step 4: Build the application using PyInstaller
       - name: Build application
         env:
-           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
         run: |
           pyinstaller SEOMaker.spec
 
